# compare

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
py/: compare.py
web/comfyui/: base_node.js  compare.js  config.js  constants.js  feature_import_individual_nodes.js  index.js  mynode.js  utils.js  utils_canvas.js  utils_widgets.js
web/comfyui/services/: bookmarks_services.js  config_service.js
web/common/: dialog.js  link_fixer.js  mynode_api.js  progress_bar.js  shared_utils.js  utils_dom.js
web/common/media/: svgs.js
web/extensions/compare-comfy/: compare.css
